@@ -166,7 +166,7 @@ alloc_res4(void)
 	if (res != NULL)
 		return res;
 
-	rl = emalloc_zero(count * cb);
+	rl = eallocarray(count, cb);
 	/* link all but the first onto free list */
 	res = (void *)((char *)rl + (count - 1) * cb);
 	for (i = count - 1; i > 0; i--) {
@@ -192,7 +192,7 @@ alloc_res6(void)
 	if (res != NULL)
 		return res;
 
-	rl = emalloc_zero(count * cb);
+	rl = eallocarray(count, cb);
 	/* link all but the first onto free list */
 	res = (void *)((char *)rl + (count - 1) * cb);
 	for (i = count - 1; i > 0; i--) {
