@@ -1,6 +1,7 @@
 ---
 (4.2.8p10)
 
+* [Sec 3385] NTP-01-010 NTP: ereallocarray()/eallocarray() underused. HStenn
 * [Bug 3363] Support for openssl-1.1.0 without compatibility modes
   - rework of patch set from <ntp.org@eroen.eu>. <perlinger@ntp.org>
 * [Bug 3356] Bugfix 3072 breaks multicastclient <perlinger@ntp.org>
